feat: 修正ESLint規則和新增FriendList模型和路由
